release: 3.0.0, patches, added admins, security